--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body{
 }
 .first-section .first-left-side {
   float: right;
-  width: 40%
+  width: 40%;
   margin-right: 30px;
   flex-direction: row-reverse;
 }
@@ -61,7 +61,7 @@ body{
 }
 .first-section .first-right-side {
   float: right;
-  width: 60%
+  width: 60%;
   text-align: left;
 }
 .section {
@@ -85,48 +85,115 @@ body{
 .right-side {
   text-align: left;
 }
-.skill-container {
-  background-color: #bab5b5;
-  padding: 0 20px;
-  width: 80%;
-  box-sizing: border-box;
-  height: auto;
-  top: 0;
-  .skill-list {
-    margin: 0 auto;
-    width: 100%;
-    li {
-      position: relative;
-      margin-bottom: 32px;
-      padding-left: 6px;
-      .bar-container, .bar {  
-        position: absolute;
-        left: 0;
-        top: 0;
-        height: 3px;  
-        border-radius: 15px;
-        content: "";
-      }
-      .skill-name {
-        position: absolute;
-        left: 0;
-        top: -20px; /* 바 위에 위치하도록 설정합니다 */
-      }
-      .bar-container {
-        width: 100%;
-        background-color: #333;
-        
-        .bar {
-          top: 0;
-        }
-        .pct {
-          position: absolute;
-          top: -19px;
-          right: 0;
-          opacity: 0;
-          transition: opacity 0.3s linear;
-        }
-      }
-    }   
-  }
+.skills-certification {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #444;
+  color: #fff;
+}
+
+.skills{
+  width: 70%;
+}
+.certification, .etc {
+  width: 30%;
+}
+.skills h3,
+.certification h3 {
+  margin-bottom: 20px;
+}
+
+.skill {
+  margin-bottom: 10px;
+}
+
+.skill span {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.progress-bar {
+  width: 100%;
+  background-color: #555;
+  border-radius: 5px;
+  overflow: hidden;
+}
+
+.progress {
+  height: 10px;
+  background-color: rgb(168, 228, 254);
+}
+
+.certification ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.certification li {
+  margin-bottom: 10px;
+}
+
+#projects {
+  padding: 50px 0;
+  background-color: #f5f5f5;
+}
+
+.projects-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
+}
+
+.project {
+  width: 300px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.project-image img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.project-info {
+  padding: 20px;
+}
+
+.project-info h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.project-info p {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 20px;
+}
+
+.more-btn {
+  display: inline-block;
+  background-color: #00b8d4;
+  color: #fff;
+  text-decoration: none;
+  padding: 8px 16px;
+  border-radius: 4px;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
+}
+
+.more-btn:hover {
+  background-color: #00a0b2;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  margin-bottom: 5px;
 }
