--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body{
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 100;
+  min-height: auto;
+  display: table-cell;
+  vertical-align: middle;
 }
 .container {
   background-color: #2f2f2f;
