Update: 글자 사이즈 자동 조절

--- a/style.css
+++ b/style.css
@@ -348,7 +348,11 @@ li {
     padding: 6px 12px; /* 작은 화면에서 버튼 패딩 조정 */
   }
 
-  .contact__links i {
-    font-size: 2.5rem; /* 작은 화면에서 아이콘 크기 조정 */
+  .project-info h3 {
+    font-size: 18px; /* 작은 화면에서 프로젝트 제목 글자 크기 조정 */
+  }
+
+  .project-info p {
+    font-size: 12px; /* 작은 화면에서 프로젝트 설명 글자 크기 조정 */
   }
 }
