--- a/style.css
+++ b/style.css
@@ -58,17 +58,18 @@ body {
   padding-right: 5%;
   padding-bottom: 5%;
 }
+
 .first-section .content {
   display: flex;
   flex-wrap: wrap; /* 모바일 대응을 위해 flex-wrap 추가 */
   justify-content: center; /* 중앙 정렬을 위해 추가 */
-  gap: 20px; /* 이미지와 글 사이의 간격 설정 */
+  gap: 25px; /* 이미지와 글 사이의 간격 설정 */
 }
 
 .first-section .first-left-side {
   flex: 1 1 300px; /* 최소 너비 300px 설정 */
   display: flex;
-  justify-content: center; /* 이미지 중앙 정렬 */
+  justify-content: right;
 }
 
 .first-section .first-left-side img {
@@ -78,11 +79,10 @@ body {
 }
 
 .first-section .first-right-side {
-  flex: 1 1 300px; /* 최소 너비 300px 설정 */
+  flex: 1 1 600px; /* 최소 너비 300px 설정 */
   text-align: left;
   display: flex;
   flex-direction: column;
-  justify-content: center; /* 텍스트를 중앙 정렬 */
 }
 .section {
   text-align: center;
@@ -304,7 +304,7 @@ ul {
 li {
   margin-bottom: 5px;
 }
-@media (max-width: 768px) {
+@media (max-width: 1200px) {
   .first-section {
     padding-top: 180px; /* 모바일에서 패딩 조정 */
   }
@@ -318,6 +318,11 @@ li {
   .first-section .first-right-side {
     width: 100%; /* 모바일에서 전체 너비 사용 */
     text-align: center; /* 텍스트 중앙 정렬 */
+    justify-content: center; /* 요소 중앙 정렬 */
+  }
+
+  .first-section .first-left-side img {
+    margin: 0 auto; /* 이미지 중앙 정렬 */
   }
 
   .skills-certification {
