--- a/style.css
+++ b/style.css
@@ -184,7 +184,9 @@ body {
 }
 
 .project {
-  width: 300px;
+  flex: 1 1 300dx;
+  min-width: 300px;
+  max-width: 300px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
@@ -334,8 +336,11 @@ li {
     margin-bottom: 20px; /* 하단 여백 추가 */
   }
 
+
   .project {
-    width: 100%; /* 모바일에서 전체 너비 사용 */
+    width: 90%; /* 모바일에서 전체 너비 사용 */
+    min-width: auto;
+    max-width: auto;
   }
 }
 
@@ -351,6 +356,17 @@ li {
   .more-btn {
     font-size: 12px; /* 작은 화면에서 버튼 글자 크기 조정 */
     padding: 6px 12px; /* 작은 화면에서 버튼 패딩 조정 */
+  }
+
+  .projects-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .project {
+    width: 80%; /* 모바일에서 전체 너비 사용 */
+    min-width: auto;
+    max-width: auto;
   }
 
   .project-info h3 {
