--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ body {
   text-align: center;
   padding-left: 5%;
   padding-right: 5%;
+  justify-content: center;
 }
 .section .content {
   text-align: center;
@@ -106,9 +107,11 @@ body {
   text-align: left;
 }
 .skills-certification {
+  max-width: 1200px;
+  margin: 0 auto; /* 가운데 정렬을 위한 자동 마진 */
   display: flex;
   flex-wrap: wrap; /* 모바일에서 flex-wrap 적용 */
-  justify-content: space-between;
+  justify-content: center;
   padding: 20px;
   background-color: #444;
   color: #fff;
@@ -172,7 +175,7 @@ body {
 }
 
 #projects {
-  padding: 50px 0;
+  padding: 30px 0;
   background-color: #f5f5f5;
 }
 
@@ -328,14 +331,21 @@ li {
   }
 
   .skills-certification {
-    flex-direction: column; /* 모바일에서 세로 정렬 */
+    display: flex;
+    flex-direction: column; /* 모바일에서 세로로 정렬 */
   }
-
+  .certification {
+    flex-direction: row;
+    justify-content: center;
+  }
+  .certification-up, .certification-down {
+    width:100%;
+  }
+  
   .skills, .certification, .etc {
     width: 100%; /* 모바일에서 전체 너비 사용 */
     margin-bottom: 20px; /* 하단 여백 추가 */
   }
-
 
   .project {
     width: 90%; /* 모바일에서 전체 너비 사용 */
